Removed some comments that were misplaced created policy for addUser and updated the readme file